--- a/Real-time Insights from Social Media Data/notebook.ipynb
+++ b/Real-time Insights from Social Media Data/notebook.ipynb
@@ -137,13 +137,15 @@
    "outputs": [],
    "source": [
     "# Extracting all the WW trend names from WW_trends\n",
-    "world_trends = set([... for trend in ...])\n",
+    "world_trends = set([trend['name']                    \n",
+    "                    for trend in WW_trends[0]['trends']])\n",
     "\n",
     "# Extracting all the US trend names from US_trends\n",
-    "us_trends = set([... for trend in ...]) \n",
+    "us_trends = set([trend['name'] \n",
+    "                     for trend in US_trends[0]['trends']]) \n",
     "\n",
-    "# Getting the intersection of the two sets of trends\n",
-    "common_trends = ...\n",
+    "# Let's get the intersection of the two sets of trends\n",
+    "common_trends = world_trends.intersection(us_trends)\n",
     "\n",
     "# Inspecting the data\n",
     "print(world_trends, \"\\n\")\n",
@@ -192,7 +194,7 @@
    "outputs": [],
    "source": [
     "# Loading the data\n",
-    "tweets = ...\n",
+    "tweets = json.loads(open('datasets/WeLoveTheEarth.json').read())\n",
     "\n",
     "# Inspecting some tweets\n",
     "tweets[0:2]"
@@ -234,13 +236,18 @@
    "outputs": [],
    "source": [
     "# Extracting the text of all the tweets from the tweet object\n",
-    "texts = [... for tweet in tweets]\n",
+    "texts = [tweet['text'] \n",
+    "                 for tweet in tweets ]\n",
     "\n",
     "# Extracting screen names of users tweeting about #WeLoveTheEarth\n",
-    "names = [... for tweet in tweets for ... in ...]\n",
+    "names = [user_mention['screen_name'] \n",
+    "                 for tweet in tweets\n",
+    "                     for user_mention in tweet['entities']['user_mentions']]\n",
     "\n",
     "# Extracting all the hashtags being used when talking about this topic\n",
-    "hashtags = ...\n",
+    "hashtags = [hashtag['text'] \n",
+    "             for tweet in tweets\n",
+    "                 for hashtag in tweet['entities']['hashtags']]\n",
     "\n",
     "# Inspecting the first 10 results\n",
     "print (json.dumps(texts[0:10], indent=1),\"\\n\")\n",
