--- a/Real-time Insights from Social Media Data/notebook.ipynb
+++ b/Real-time Insights from Social Media Data/notebook.ipynb
@@ -296,11 +296,11 @@
    "outputs": [],
    "source": [
     "# Importing modules\n",
-    "# ... YOUR CODE FOR TASK 6 ...\n",
+    "from collections import Counter\n",
     "\n",
     "# Counting occcurrences/ getting frequency dist of all names and hashtags\n",
     "for item in [names, hashtags]:\n",
-    "    c = ... \n",
+    "    c = Counter(item)    \n",
     "    # Inspecting the 10 most common items in c\n",
     "    print (c.most_common(10), \"\\n\")"
    ]
@@ -351,7 +351,16 @@
    "outputs": [],
    "source": [
     "# Extracting useful information from retweets\n",
-    "retweets = [(..., ..., ..., ..., ...) for tweet in tweets if 'retweeted_status' in tweet]"
+    "retweets = [\n",
+    "             (tweet['retweet_count'], \n",
+    "              tweet['retweeted_status']['favorite_count'],\n",
+    "              tweet['retweeted_status']['user']['followers_count'],\n",
+    "              tweet['retweeted_status']['user']['screen_name'],\n",
+    "              tweet['text']) \n",
+    "            \n",
+    "            for tweet in tweets \n",
+    "                if 'retweeted_status' in tweet\n",
+    "           ]"
    ]
   },
   {
@@ -391,8 +400,11 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "# Create a DataFrame and visualize the data in a pretty and insightful format\n",
-    "df = ...\n",
+    "# Visualizing the data in a pretty and insightful format\n",
+    "df = pd.DataFrame(\n",
+    "    retweets, \n",
+    "    columns=['Retweets','Favorites','Followers','ScreenName','Text']).groupby(\n",
+    "    ['ScreenName','Text','Followers']).sum().sort_values(by=['Followers'], ascending=False)\n",
     "\n",
     "df.style.background_gradient()"
    ]
@@ -440,12 +452,12 @@
    "source": [
     "# Extracting language for each tweet and appending it to the list of languages\n",
     "tweets_languages = []\n",
-    "for tweet in tweets: \n",
-    "    ...\n",
+    "for tweet in tweets:\n",
+    "        tweets_languages.append(tweet['lang'])\n",
     "\n",
     "# Plotting the distribution of languages\n",
     "%matplotlib inline\n",
-    "# ... YOUR CODE FOR TASK 9 ..."
+    "plt.hist(tweets_languages)"
    ]
   },
   {
