--- a/The Android App Market on Google Play/notebook.ipynb
+++ b/The Android App Market on Google Play/notebook.ipynb
@@ -539,6 +539,8 @@
    },
    "outputs": [],
    "source": [
+    "#  test\n",
+    "a = 2\n",
     "# Load user_reviews.csv\n",
     "reviews_df = pd.read_csv('datasets/user_reviews.csv')\n",
     "\n",
