--- a/The Android App Market on Google Play/notebook.ipynb
+++ b/The Android App Market on Google Play/notebook.ipynb
@@ -143,13 +143,13 @@
     "import numpy as np\n",
     "\n",
     "# Convert Installs to float data type\n",
-    "apps[...] = apps[...].astype(...)\n",
+    "apps['Installs'] = apps['Installs'].astype(float)\n",
     "\n",
     "# Convert Price to float data type\n",
-    "apps[...] = apps[...].astype(...)\n",
+    "apps['Price'] = apps['Price'].astype(float)\n",
     "\n",
     "# Checking dtypes of the apps dataframe\n",
-    "print(...)"
+    "print(apps.dtypes)"
    ]
   },
   {
@@ -197,14 +197,14 @@
     "import plotly.graph_objs as go\n",
     "\n",
     "# Print the total number of unique categories\n",
-    "num_categories = ...\n",
+    "num_categories = len(apps['Category'].unique())\n",
     "print('Number of categories = ', num_categories)\n",
     "\n",
     "# Count the number of apps in each 'Category'. \n",
-    "num_apps_in_category = ...\n",
+    "num_apps_in_category = apps['Category'].value_counts()\n",
     "\n",
     "# Sort num_apps_in_category in descending order based on the count of apps in each category\n",
-    "sorted_num_apps_in_category = ...\n",
+    "sorted_num_apps_in_category = num_apps_in_category.sort_values(ascending = False)\n",
     "\n",
     "data = [go.Bar(\n",
     "        x = num_apps_in_category.index, # index = category name\n",
