--- a/The Android App Market on Google Play/notebook.ipynb
+++ b/The Android App Market on Google Play/notebook.ipynb
@@ -249,7 +249,7 @@
    "outputs": [],
    "source": [
     "# Average rating of apps\n",
-    "avg_app_rating = ...\n",
+    "avg_app_rating = apps['Rating'].mean()\n",
     "print('Average app rating = ', avg_app_rating)\n",
     "\n",
     "# Distribution of apps according to their ratings\n",
@@ -319,19 +319,19 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Select rows where both 'Rating' and 'Size' values are present (ie. the two values are not null)\n",
-    "apps_with_size_and_rating_present = ...\n",
+    "apps_with_size_and_rating_present = apps[(~apps['Rating'].isnull()) & (~apps['Size'].isnull())]\n",
     "\n",
     "# Subset for categories with at least 250 apps\n",
-    "large_categories = apps_with_size_and_rating_present.groupby(...).filter(lambda x: len(x) >= ...)\n",
+    "large_categories = apps_with_size_and_rating_present.groupby(['Category']).filter(lambda x: len(x) >= 250)\n",
     "\n",
     "# Plot size vs. rating\n",
-    "plt1 = sns.jointplot(x = large_categories[...], y = large_categories[...])\n",
+    "plt1 = sns.jointplot(x = large_categories['Size'], y = large_categories['Rating'])\n",
     "\n",
     "# Select apps whose 'Type' is 'Paid'\n",
-    "paid_apps = ...\n",
+    "paid_apps = apps_with_size_and_rating_present[apps_with_size_and_rating_present['Type'] == 'Paid']\n",
     "\n",
     "# Plot price vs. rating\n",
-    "plt2 = sns.jointplot(x = paid_apps[...], y = paid_apps[...])"
+    "plt2 = sns.jointplot(x = paid_apps['Price'], y = paid_apps['Rating'])"
    ]
   },
   {
