--- a/The Android App Market on Google Play/notebook.ipynb
+++ b/The Android App Market on Google Play/notebook.ipynb
@@ -379,11 +379,11 @@
     "                                            'LIFESTYLE','BUSINESS'])]\n",
     "\n",
     "# Examine the price trend by plotting Price vs Category\n",
-    "ax = sns.stripplot(x = popular_app_cats[...], y = popular_app_cats[...], jitter=True, linewidth=1)\n",
+    "ax = sns.stripplot(x = popular_app_cats['Price'], y = popular_app_cats['Category'], jitter=True, linewidth=1)\n",
     "ax.set_title('App pricing trend across categories')\n",
     "\n",
     "# Apps whose Price is greater than 200\n",
-    "apps_above_200 = ...\n",
+    "apps_above_200 = popular_app_cats[popular_app_cats['Price'] > 200]\n",
     "apps_above_200[['Category', 'App', 'Price']]"
    ]
   },
@@ -422,13 +422,13 @@
    "outputs": [],
    "source": [
     "# Select apps priced below $100\n",
-    "apps_under_100 = ...\n",
+    "apps_under_100 = popular_app_cats[popular_app_cats['Price'] < 100]\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(15, 8)\n",
     "\n",
     "# Examine price vs category with the authentic apps (apps_under_100)\n",
-    "ax = sns.stripplot(x = ..., y = ..., data = ..., jitter = True, linewidth = 1)\n",
+    "ax = sns.stripplot(x = 'Price', y = 'Category', data = apps_under_100, jitter = True, linewidth = 1)\n",
     "ax.set_title('App pricing trend across categories after filtering for junk apps')"
    ]
   },
