--- a/The Android App Market on Google Play/notebook.ipynb
+++ b/The Android App Market on Google Play/notebook.ipynb
@@ -39,7 +39,9 @@
    },
    "outputs": [],
    "source": [
+    "# This line is being added as a test\n",
     "# Read in dataset\n",
+    "\n",
     "import pandas as pd\n",
     "apps_with_duplicates = pd.read_csv(\"datasets/apps.csv\")\n",
     "\n",
@@ -90,6 +92,7 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "# List of characters to remove\n",
     "chars_to_remove = ['+', ',', '$']\n",
     "# List of column names to clean\n",
