--- a/The Android App Market on Google Play/notebook.ipynb
+++ b/The Android App Market on Google Play/notebook.ipynb
@@ -539,6 +539,7 @@
    },
    "outputs": [],
    "source": [
+    "# Last task\n",
     "# Load user_reviews.csv\n",
     "reviews_df = ...\n",
     "\n",
