--- a/The Android App Market on Google Play/notebook.ipynb
+++ b/The Android App Market on Google Play/notebook.ipynb
@@ -539,12 +539,11 @@
    },
    "outputs": [],
    "source": [
-    "# Last task\n",
     "# Load user_reviews.csv\n",
-    "reviews_df = ...\n",
+    "reviews_df = pd.read_csv('datasets/user_reviews.csv')\n",
     "\n",
     "# Join the two dataframes\n",
-    "merged_df = ...\n",
+    "merged_df = pd.merge(apps, reviews_df, on = \"App\")\n",
     "\n",
     "# Drop NA values from Sentiment and Review columns\n",
     "merged_df = merged_df.dropna(subset = ['Sentiment', 'Review'])\n",
@@ -554,7 +553,7 @@
     "fig.set_size_inches(11, 8)\n",
     "\n",
     "# User review sentiment polarity for paid vs. free apps\n",
-    "ax = sns.boxplot(x = ..., y = ..., data = ...)\n",
+    "ax = sns.boxplot(x = 'Type', y = 'Sentiment_Polarity', data = merged_df)\n",
     "ax.set_title('Sentiment Polarity Distribution')"
    ]
   }
