--- a/Investigating Netflix Movies and Guest Stars in The Office/notebook.ipynb
+++ b/Investigating Netflix Movies and Guest Stars in The Office/notebook.ipynb
@@ -127,17 +127,17 @@
    "outputs": [],
    "source": [
     "# Import matplotlib.pyplot under its usual alias and create a figure\n",
-    "...\n",
+    "import matplotlib.pyplot as plt\n",
     "fig = plt.figure()\n",
     "\n",
     "# Draw a line plot of release_years and durations\n",
-    "...\n",
+    "plt.plot(durations_df['years'], durations_df['durations'])\n",
     "\n",
     "# Create a title\n",
-    "...\n",
+    "plt.title(\"Netflix Movie Durations 2011-2020\")\n",
     "\n",
     "# Show the plot\n",
-    "..."
+    "plt.show()"
    ]
   },
   {
@@ -179,10 +179,10 @@
    "outputs": [],
    "source": [
     "# Read in the CSV as a DataFrame\n",
-    "netflix_df = ...\n",
+    "netflix_df = pd.read_csv(\"datasets/netflix_data.csv\")\n",
     "\n",
     "# Print the first five rows of the DataFrame\n",
-    "..."
+    "netflix_df[0:5]"
    ]
   },
   {
