--- a/Investigating Netflix Movies and Guest Stars in The Office/notebook.ipynb
+++ b/Investigating Netflix Movies and Guest Stars in The Office/notebook.ipynb
@@ -222,13 +222,13 @@
    "outputs": [],
    "source": [
     "# Subset the DataFrame for type \"Movie\"\n",
-    "netflix_df_movies_only = ...\n",
+    "netflix_df_movies_only = netflix_df[netflix_df['type'] == 'Movie']\n",
     "\n",
     "# Select only the columns of interest\n",
-    "netflix_movies_col_subset = ...\n",
+    "netflix_movies_col_subset = netflix_df_movies_only[['title', 'country', 'genre', 'release_year', 'duration']]\n",
     "\n",
     "# Print the first five rows of the new DataFrame\n",
-    "..."
+    "netflix_movies_col_subset[0:5]"
    ]
   },
   {
@@ -270,13 +270,13 @@
     "fig = plt.figure(figsize=(12,8))\n",
     "\n",
     "# Create a scatter plot of duration versus year\n",
-    "...\n",
+    "plt.scatter(netflix_movies_col_subset[\"release_year\"], netflix_movies_col_subset[\"duration\"])\n",
     "\n",
     "# Create a title\n",
-    "...\n",
+    "plt.title(\"Movie Duration by Year of Release\")\n",
     "\n",
     "# Show the plot\n",
-    "..."
+    "plt.show()"
    ]
   },
   {
@@ -314,10 +314,10 @@
    "outputs": [],
    "source": [
     "# Filter for durations shorter than 60 minutes\n",
-    "short_movies = ...\n",
+    "short_movies = netflix_movies_col_subset[netflix_movies_col_subset['duration'] < 60]\n",
     "\n",
     "# Print the first 20 rows of short_movies\n",
-    "..."
+    "short_movies[0:20]"
    ]
   },
   {
@@ -357,21 +357,21 @@
    "outputs": [],
    "source": [
     "# Define an empty list\n",
-    "colors = ...\n",
+    "colors = []\n",
     "\n",
     "# Iterate over rows of netflix_movies_col_subset\n",
-    "for ..., ... in ... :\n",
-    "    if ... :\n",
-    "        ...\n",
-    "    elif ... :\n",
-    "        ...\n",
-    "    elif ... :\n",
-    "        ...\n",
+    "for lab, row in netflix_movies_col_subset.iterrows():\n",
+    "    if row['genre'] == \"Children\":\n",
+    "        colors.append(\"red\")\n",
+    "    elif row['genre'] == \"Documentaries\":\n",
+    "        colors.append(\"blue\")\n",
+    "    elif row['genre'] == \"Stand-Up\":\n",
+    "        colors.append(\"green\")\n",
     "    else:\n",
-    "        ...\n",
-    "        \n",
-    "# Inspect the first 10 values in your list        \n",
-    "..."
+    "        colors.append(\"black\")\n",
+    "\n",
+    "# Inspect the first 10 values in your list      \n",
+    "colors[0:10]"
    ]
   },
   {
@@ -413,15 +413,15 @@
     "fig = plt.figure(figsize=(12,8))\n",
     "\n",
     "# Create a scatter plot of duration versus release_year\n",
-    "...\n",
+    "plt.scatter(netflix_movies_col_subset[\"release_year\"], netflix_movies_col_subset[\"duration\"], c=colors)\n",
     "\n",
     "# Create a title and axis labels\n",
-    "...\n",
-    "...\n",
-    "...\n",
+    "plt.title(\"Movie duration by year of release\")\n",
+    "plt.xlabel(\"Release year\")\n",
+    "plt.ylabel(\"Duration (min)\")\n",
     "\n",
     "# Show the plot\n",
-    "..."
+    "plt.show()"
    ]
   },
   {
