averaging debt among indicators

--- a/Analyze International Debt Statistics/notebook.ipynb
+++ b/Analyze International Debt Statistics/notebook.ipynb
@@ -205,12 +205,12 @@
    "source": [
     "%%sql\n",
     "SELECT \n",
-    "    ..., \n",
-    "    ...\n",
+    "    country_name, \n",
+    "    SUM(debt) AS total_debt\n",
     "FROM international_debt\n",
-    "GROUP BY ...\n",
-    "ORDER BY ... \n",
-    "...;"
+    "GROUP BY country_name\n",
+    "ORDER BY total_debt DESC\n",
+    "LIMIT 1;"
    ]
   },
   {
@@ -249,13 +249,13 @@
    "source": [
     "%%sql\n",
     "SELECT \n",
-    "    ... AS ...,\n",
-    "    ...,\n",
-    "    ...\n",
+    "    indicator_code AS debt_indicator,\n",
+    "    indicator_name,\n",
+    "    AVG(debt) AS average_debt\n",
     "FROM international_debt\n",
-    "GROUP BY ...\n",
-    "ORDER BY ...\n",
-    "...;"
+    "GROUP BY debt_indicator, indicator_name\n",
+    "ORDER BY average_debt DESC\n",
+    "LIMIT 10;"
    ]
   },
   {
