finding most common indicator

--- a/Analyze International Debt Statistics/notebook.ipynb
+++ b/Analyze International Debt Statistics/notebook.ipynb
@@ -295,13 +295,13 @@
    "source": [
     "%%sql\n",
     "SELECT \n",
-    "    ..., \n",
-    "    ...\n",
+    "    country_name, \n",
+    "    indicator_name\n",
     "FROM international_debt\n",
-    "WHERE ... = (SELECT \n",
-    "                 ...\n",
-    "             FROM ...\n",
-    "             ...);"
+    "WHERE debt = (SELECT \n",
+    "                  MAX(debt)\n",
+    "              FROM international_debt\n",
+    "              WHERE indicator_code='DT.AMT.DLXF.CD');"
    ]
   },
   {
@@ -338,7 +338,14 @@
    },
    "outputs": [],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "SELECT \n",
+    "    indicator_code,\n",
+    "    COUNT(indicator_code) AS indicator_count\n",
+    "FROM international_debt\n",
+    "GROUP BY indicator_code\n",
+    "ORDER BY indicator_count DESC, indicator_code DESC\n",
+    "LIMIT 20;"
    ]
   },
   {
