--- a/pandas/exercise-summary-functions-and-maps.ipynb
+++ b/pandas/exercise-summary-functions-and-maps.ipynb
@@ -1,1 +1,341 @@
-{"metadata":{"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.6.5"}},"nbformat_minor":4,"nbformat":4,"cells":[{"cell_type":"markdown","source":"**This notebook is an exercise in the [Pandas](https://www.kaggle.com/learn/pandas) course.  You can reference the tutorial at [this link](https://www.kaggle.com/residentmario/summary-functions-and-maps).**\n\n---\n","metadata":{}},{"cell_type":"markdown","source":"# Introduction\n\nNow you are ready to get a deeper understanding of your data.\n\nRun the following cell to load your data and some utility functions (including code to check your answers).","metadata":{}},{"cell_type":"code","source":"import pandas as pd\npd.set_option(\"display.max_rows\", 5)\nreviews = pd.read_csv(\"../input/wine-reviews/winemag-data-130k-v2.csv\", index_col=0)\n\nfrom learntools.core import binder; binder.bind(globals())\nfrom learntools.pandas.summary_functions_and_maps import *\nprint(\"Setup complete.\")\n\nreviews.head()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":"# Exercises","metadata":{}},{"cell_type":"markdown","source":"## 1.\n\nWhat is the median of the `points` column in the `reviews` DataFrame?","metadata":{}},{"cell_type":"code","source":"median_points = ____\n\n# Check your answer\nq1.check()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"#q1.hint()\n#q1.solution()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":"## 2. \nWhat countries are represented in the dataset? (Your answer should not include any duplicates.)","metadata":{}},{"cell_type":"code","source":"countries = ____\n\n# Check your answer\nq2.check()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"#q2.hint()\n#q2.solution()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":"## 3.\nHow often does each country appear in the dataset? Create a Series `reviews_per_country` mapping countries to the count of reviews of wines from that country.","metadata":{}},{"cell_type":"code","source":"reviews_per_country = ____\n\n# Check your answer\nq3.check()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"#q3.hint()\n#q3.solution()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":"## 4.\nCreate variable `centered_price` containing a version of the `price` column with the mean price subtracted.\n\n(Note: this 'centering' transformation is a common preprocessing step before applying various machine learning algorithms.) ","metadata":{}},{"cell_type":"code","source":"centered_price = ____\n\n# Check your answer\nq4.check()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"#q4.hint()\n#q4.solution()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":"## 5.\nI'm an economical wine buyer. Which wine is the \"best bargain\"? Create a variable `bargain_wine` with the title of the wine with the highest points-to-price ratio in the dataset.","metadata":{}},{"cell_type":"code","source":"bargain_wine = ____\n\n# Check your answer\nq5.check()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"#q5.hint()\n#q5.solution()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":"## 6.\nThere are only so many words you can use when describing a bottle of wine. Is a wine more likely to be \"tropical\" or \"fruity\"? Create a Series `descriptor_counts` counting how many times each of these two words appears in the `description` column in the dataset.","metadata":{}},{"cell_type":"code","source":"descriptor_counts = ____\n\n# Check your answer\nq6.check()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"#q6.hint()\n#q6.solution()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":"## 7.\nWe'd like to host these wine reviews on our website, but a rating system ranging from 80 to 100 points is too hard to understand - we'd like to translate them into simple star ratings. A score of 95 or higher counts as 3 stars, a score of at least 85 but less than 95 is 2 stars. Any other score is 1 star.\n\nAlso, the Canadian Vintners Association bought a lot of ads on the site, so any wines from Canada should automatically get 3 stars, regardless of points.\n\nCreate a series `star_ratings` with the number of stars corresponding to each review in the dataset.","metadata":{}},{"cell_type":"code","source":"star_ratings = ____\n\n# Check your answer\nq7.check()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"code","source":"#q7.hint()\n#q7.solution()","metadata":{},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":"# Keep going\nContinue to **[grouping and sorting](https://www.kaggle.com/residentmario/grouping-and-sorting)**.","metadata":{}},{"cell_type":"markdown","source":"---\n\n\n\n\n*Have questions or comments? Visit the [course discussion forum](https://www.kaggle.com/learn/pandas/discussion) to chat with other learners.*","metadata":{}}]}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**This notebook is an exercise in the [Pandas](https://www.kaggle.com/learn/pandas) course.  You can reference the tutorial at [this link](https://www.kaggle.com/residentmario/summary-functions-and-maps).**\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction\n",
+    "\n",
+    "Now you are ready to get a deeper understanding of your data.\n",
+    "\n",
+    "Run the following cell to load your data and some utility functions (including code to check your answers)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "pd.set_option(\"display.max_rows\", 5)\n",
+    "reviews = pd.read_csv(\"../input/wine-reviews/winemag-data-130k-v2.csv\", index_col=0)\n",
+    "\n",
+    "from learntools.core import binder; binder.bind(globals())\n",
+    "from learntools.pandas.summary_functions_and_maps import *\n",
+    "print(\"Setup complete.\")\n",
+    "\n",
+    "reviews.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.\n",
+    "\n",
+    "What is the median of the `points` column in the `reviews` DataFrame?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_points = reviews.points.median()\n",
+    "\n",
+    "# Check your answer\n",
+    "q1.check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#q1.hint()\n",
+    "#q1.solution()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. \n",
+    "What countries are represented in the dataset? (Your answer should not include any duplicates.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries = reviews.country.unique()\n",
+    "\n",
+    "# Check your answer\n",
+    "q2.check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#q2.hint()\n",
+    "#q2.solution()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.\n",
+    "How often does each country appear in the dataset? Create a Series `reviews_per_country` mapping countries to the count of reviews of wines from that country."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reviews_per_country = reviews.country.value_counts()\n",
+    "\n",
+    "# Check your answer\n",
+    "q3.check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#q3.hint()\n",
+    "#q3.solution()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.\n",
+    "Create variable `centered_price` containing a version of the `price` column with the mean price subtracted.\n",
+    "\n",
+    "(Note: this 'centering' transformation is a common preprocessing step before applying various machine learning algorithms.) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "price_mean = reviews.price.mean()\n",
+    "centered_price = reviews.price - price_mean\n",
+    "\n",
+    "# Check your answer\n",
+    "q4.check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#q4.hint()\n",
+    "#q4.solution()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.\n",
+    "I'm an economical wine buyer. Which wine is the \"best bargain\"? Create a variable `bargain_wine` with the title of the wine with the highest points-to-price ratio in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_indx = (reviews.points/ reviews.price).idxmax()\n",
+    "bargain_wine = reviews.loc[max_indx , 'title'] \n",
+    "# bargain_wine\n",
+    "# Check your answer\n",
+    "q5.check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#q5.hint()\n",
+    "#q5.solution()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.\n",
+    "There are only so many words you can use when describing a bottle of wine. Is a wine more likely to be \"tropical\" or \"fruity\"? Create a Series `descriptor_counts` counting how many times each of these two words appears in the `description` column in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_trop = reviews.description.map(lambda desc: \"tropical\" in desc).sum()\n",
+    "n_fruity = reviews.description.map(lambda desc: \"fruity\" in desc).sum()\n",
+    "\n",
+    "descriptor_counts = pd.Series([n_trop, n_fruity], index = [\"tropical\", \"fruity\"])\n",
+    "\n",
+    "# descriptor_counts\n",
+    "# Check your answer\n",
+    "q6.check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#q6.hint()\n",
+    "#q6.solution()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.\n",
+    "We'd like to host these wine reviews on our website, but a rating system ranging from 80 to 100 points is too hard to understand - we'd like to translate them into simple star ratings. A score of 95 or higher counts as 3 stars, a score of at least 85 but less than 95 is 2 stars. Any other score is 1 star.\n",
+    "\n",
+    "Also, the Canadian Vintners Association bought a lot of ads on the site, so any wines from Canada should automatically get 3 stars, regardless of points.\n",
+    "\n",
+    "Create a series `star_ratings` with the number of stars corresponding to each review in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rating(row):\n",
+    "    if row.country == 'Canada':\n",
+    "        return 3\n",
+    "    if row.points >= 95:\n",
+    "        return 3\n",
+    "    elif row.points >= 85 and row.points < 95:\n",
+    "        return 2\n",
+    "    else:\n",
+    "        return 1\n",
+    "\n",
+    "    \n",
+    "# star_ratings = reviews.points.map(lambda x: rating(x))\n",
+    "# canada_index = reviews.index[reviews.country == 'Canada']  \n",
+    "# star_ratings.loc[canada_index] = 3\n",
+    "\n",
+    "# star_ratings = reviews.apply(rating, axis = 'columns')\n",
+    "\n",
+    "\n",
+    "# def stars(row):\n",
+    "#     if row.country == 'Canada':\n",
+    "#         return 3\n",
+    "#     elif row.points >= 95:\n",
+    "#         return 3\n",
+    "#     elif row.points >= 85:\n",
+    "#         return 2\n",
+    "#     else:\n",
+    "#         return 1\n",
+    "\n",
+    "# star_ratings = reviews.apply(stars, axis='columns')\n",
+    "\n",
+    "\n",
+    "# Check your answer\n",
+    "q7.check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#q7.hint()\n",
+    "#q7.solution()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Keep going\n",
+    "Continue to **[grouping and sorting](https://www.kaggle.com/residentmario/grouping-and-sorting)**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "*Have questions or comments? Visit the [course discussion forum](https://www.kaggle.com/learn/pandas/discussion) to chat with other learners.*"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
