--- a/ML_with_tensorflow/titanic_survival_exploration.ipynb
+++ b/ML_with_tensorflow/titanic_survival_exploration.ipynb
@@ -152,7 +152,8 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "# TODO: Define the classifier, and fit it to the data\n",
-    "model = None"
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(X_train, y_train)"
    ]
   },
   {
@@ -207,7 +208,20 @@
    "source": [
     "# TODO: Train the model\n",
     "\n",
+    "model = DecisionTreeClassifier(max_depth = 10, min_samples_split = 2, min_samples_leaf = 1)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "\n",
     "# TODO: Make predictions\n",
+    "y_train_pred = model.predict(X_train)\n",
+    "y_test_pred = model.predict(X_test)\n",
+    "\n",
+    "# Calculate the accuracy\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "train_accuracy = accuracy_score(y_train, y_train_pred)\n",
+    "test_accuracy = accuracy_score(y_test, y_test_pred)\n",
+    "print('The training accuracy is', train_accuracy)\n",
+    "print('The test accuracy is', test_accuracy)\n",
     "\n",
     "# TODO: Calculate the accuracy"
    ]
@@ -236,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
