--- a/ML_with_tensorflow/Bayesian_Inference.ipynb
+++ b/ML_with_tensorflow/Bayesian_Inference.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "import pandas as pd\n",
     "# Dataset available using filepath 'smsspamcollection/SMSSpamCollection'\n",
-    "df = #TODO\n",
+    "df = pd.read_table('smsspamcollection/SMSSpamCollection', names = ['label', 'sms_message'])\n",
     "\n",
     "# Output printing out first 5 rows\n",
     "df.head()"
@@ -148,7 +148,9 @@
     "'''\n",
     "Solution\n",
     "'''\n",
-    "df['label'] = df.label.map(# TODO))"
+    "print(df.shape)\n",
+    "\n",
+    "df['label'] = df.label.map({'ham':0, 'spam':1})"
    ]
   },
   {
@@ -236,7 +238,7 @@
     "\n",
     "lower_case_documents = []\n",
     "for i in documents:\n",
-    "    # TODO\n",
+    "    lower_case_documents.append(i.lower())\n",
     "print(lower_case_documents)"
    ]
   },
@@ -263,7 +265,14 @@
     "sans_punctuation_documents = []\n",
     "import string\n",
     "\n",
+    "punc_list = string.punctuation\n",
+    "\n",
     "for i in lower_case_documents:\n",
+    "    for c in i:\n",
+    "        if c in punc_list:\n",
+    "            i = i.replace(c, \"\")\n",
+    "    sans_punctuation_documents.append(i)\n",
+    "    \n",
     "    # TODO\n",
     "    \n",
     "print(sans_punctuation_documents)"
@@ -300,7 +309,7 @@
     "'''\n",
     "preprocessed_documents = []\n",
     "for i in sans_punctuation_documents:\n",
-    "    # TODO\n",
+    "    preprocessed_documents.append(i.split())\n",
     "print(preprocessed_documents)"
    ]
   },
@@ -339,7 +348,7 @@
     "from collections import Counter\n",
     "\n",
     "for i in preprocessed_documents:\n",
-    "    #TODO\n",
+    "    frequency_list.append(Counter(i))\n",
     "    \n",
     "pprint.pprint(frequency_list)"
    ]
@@ -398,7 +407,7 @@
     "Solution\n",
     "'''\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "count_vector = # TODO"
+    "count_vector = CountVectorizer()"
    ]
   },
   {
@@ -492,7 +501,7 @@
     "'''\n",
     "Solution\n",
     "'''\n",
-    "doc_array = # TODO\n",
+    "doc_array = count_vector.transform(documents).toarray() # TODO\n",
     "doc_array"
    ]
   },
@@ -520,7 +529,7 @@
     "'''\n",
     "Solution\n",
     "'''\n",
-    "frequency_matrix = pd.DataFrame(# TODO))\n",
+    "frequency_matrix = pd.DataFrame(doc_array, columns = count_vector.get_feature_names() )\n",
     "frequency_matrix"
    ]
   },
@@ -1206,7 +1215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
