--- a/ML_with_tensorflow/Bayesian_Inference.ipynb
+++ b/ML_with_tensorflow/Bayesian_Inference.ipynb
@@ -721,16 +721,18 @@
     "p_diabetes = 0.01\n",
     "\n",
     "# P(~D)\n",
+    "\n",
     "p_no_diabetes = 0.99\n",
     "\n",
     "# Sensitivity or P(Pos|D)\n",
+    "\n",
     "p_pos_diabetes = 0.9\n",
     "\n",
     "# Specificity or P(Neg|~D)\n",
     "p_neg_no_diabetes = 0.9\n",
     "\n",
     "# P(Pos)\n",
-    "p_pos = # TODO\n",
+    "p_pos = 0.99 * (1-0.9) + 0.01 * 0.9\n",
     "print('The probability of getting a positive test result P(Pos) is: {}',format(p_pos))"
    ]
   },
@@ -776,7 +778,7 @@
     "Solution\n",
     "'''\n",
     "# P(D|Pos)\n",
-    "p_diabetes_pos = # TODO\n",
+    "p_diabetes_pos = 0.01 * 0.9 / 0.108\n",
     "print('Probability of an individual having diabetes, given that that individual got a positive test result is:\\\n",
     "',format(p_diabetes_pos)) "
    ]
@@ -814,9 +816,9 @@
     "p_pos_no_diabetes = 0.1\n",
     "\n",
     "# P(~D|Pos)\n",
-    "p_no_diabetes_pos = # TODO\n",
-    "print 'Probability of an individual not having diabetes, given that that individual got a positive test result is:'\\\n",
-    ",p_no_diabetes_pos"
+    "p_no_diabetes_pos = 0.99 * 0.1 / 0.108\n",
+    "print('Probability of an individual not having diabetes, given that that individual got a positive test result is:'\\\n",
+    ",p_no_diabetes_pos)"
    ]
   },
   {
@@ -927,7 +929,7 @@
     "# P(I/J)\n",
     "p_j_i = 0.1\n",
     "\n",
-    "p_j_text = # TODO\n",
+    "p_j_text = p_j * p_j_f * p_j_i\n",
     "print(p_j_text)"
    ]
   },
@@ -960,10 +962,19 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "Solution: Step 3: Compute P(F,I) and store in p_f_i\n",
+    "Solution: Step 2\n",
     "'''\n",
-    "p_f_i = # TODO\n",
-    "print('Probability of words freedom and immigration being said are: ', format(p_f_i))"
+    "# P(G)\n",
+    "p_g = 0.5\n",
+    "\n",
+    "# P(F/G)\n",
+    "p_g_f = 0.7\n",
+    "\n",
+    "# P(I/G)\n",
+    "p_g_i = 0.2\n",
+    "\n",
+    "p_g_text = p_g * p_g_f * p_g_i\n",
+    "print(p_g_text)"
    ]
   },
   {
@@ -994,7 +1005,7 @@
     "'''\n",
     "Solution\n",
     "'''\n",
-    "p_j_fi = # TODO\n",
+    "p_j_fi = 0.5 * p_j_f * p_j_i / p_f_i\n",
     "print('The probability of Jill Stein saying the words Freedom and Immigration: ', format(p_j_fi))"
    ]
   },
@@ -1019,7 +1030,7 @@
     "'''\n",
     "Solution\n",
     "'''\n",
-    "p_g_fi = # TODO\n",
+    "p_g_fi = 0.5 * p_g_f * p_g_i / p_f_i\n",
     "print('The probability of Gary Johnson saying the words Freedom and Immigration: ', format(p_g_fi))"
    ]
   },
@@ -1080,8 +1091,8 @@
     "Solution\n",
     "'''\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "naive_bayes = # TODO\n",
-    "naive_bayes.fit(# TODO)"
+    "naive_bayes = MultinomialNB()\n",
+    "naive_bayes.fit(training_data, y_train)"
    ]
   },
   {
@@ -1106,7 +1117,7 @@
     "'''\n",
     "Solution\n",
     "'''\n",
-    "predictions = naive_bayes.predict(# TODO)"
+    "predictions = naive_bayes.predict(testing_data)"
    ]
   },
   {
@@ -1169,10 +1180,11 @@
     "Solution\n",
     "'''\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "print('Accuracy score: ', format(accuracy_score(# TODO)))\n",
-    "print('Precision score: ', format(precision_score(# TODO)))\n",
-    "print('Recall score: ', format(recall_score(# TODO)))\n",
-    "print('F1 score: ', format(f1_score(# TODO)))"
+    "print('Accuracy score: ', format(accuracy_score(y_test, predictions)))\n",
+    "print('Precision score: ', format(precision_score(y_test, predictions)))\n",
+    "print('Recall score: ', format(recall_score(y_test, predictions)))\n",
+    "print('F1 score: ', format(f1_score(y_test, predictions)))\n",
+    "    \n"
    ]
   },
   {
