--- a/ML_with_tensorflow/Spam_&_Ensembles.ipynb
+++ b/ML_with_tensorflow/Spam_&_Ensembles.ipynb
@@ -113,7 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the Bagging, RandomForest, and AdaBoost Classifier\n"
+    "# Import the Bagging, RandomForest, and AdaBoost Classifier\n",
+    "from sklearn.ensemble import BaggingClassifier, RandomForestClassifier, AdaBoostClassifier"
    ]
   },
   {
@@ -132,15 +133,16 @@
     "# Instantiate a BaggingClassifier with:\n",
     "# 200 weak learners (n_estimators) and everything else as default values\n",
     "\n",
-    "\n",
+    "Bclass = BaggingClassifier(n_estimators=200)\n",
     "\n",
     "# Instantiate a RandomForestClassifier with:\n",
     "# 200 weak learners (n_estimators) and everything else as default values\n",
-    "\n",
+    "Rclass = RandomForestClassifier(n_estimators=200)\n",
     "\n",
     "# Instantiate an a AdaBoostClassifier with:\n",
     "# With 300 weak learners (n_estimators) and a learning_rate of 0.2\n",
-    "\n"
+    "\n",
+    "Aclass = AdaBoostClassifier(n_estimators=300)"
    ]
   },
   {
@@ -157,13 +159,13 @@
    "outputs": [],
    "source": [
     "# Fit your BaggingClassifier to the training data\n",
-    "\n",
+    "Bclass.fit(training_data, y_train)\n",
     "\n",
     "# Fit your RandomForestClassifier to the training data\n",
-    "\n",
+    "Rclass.fit(training_data, y_train)\n",
     "\n",
     "# Fit your AdaBoostClassifier to the training data\n",
-    "\n"
+    "Aclass.fit(training_data, y_train)\n"
    ]
   },
   {
@@ -181,12 +183,12 @@
    "source": [
     "# Predict using BaggingClassifier on the test data\n",
     "\n",
-    "\n",
+    "Bpredict = Bclass.predict(testing_data)\n",
     "# Predict using RandomForestClassifier on the test data\n",
-    "\n",
+    "Rpredict = Rclass.predict(testing_data)\n",
     "\n",
     "# Predict using AdaBoostClassifier on the test data\n",
-    "\n"
+    "Apredict = Aclass.predict(testing_data)\n"
    ]
   },
   {
@@ -234,16 +236,16 @@
    "outputs": [],
    "source": [
     "# Print Bagging scores\n",
-    "\n",
+    "print_metrics(y_test, Bpredict, \"Bagging\")\n",
     "\n",
     "# Print Random Forest scores\n",
-    "\n",
+    "print_metrics(y_test, Rpredict, \"Random Forest\")\n",
     "\n",
     "# Print AdaBoost scores\n",
-    "\n",
+    "print_metrics(y_test, Apredict, \"AdaBoost\")\n",
     "\n",
     "# Naive Bayes Classifier scores\n",
-    "\n"
+    "print_metrics(y_test, predictions, \"Naive Bayes\")\n"
    ]
   },
   {
@@ -302,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
